Wed Mar 27 00:27:32 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* telnetd.c: remove inclusion of netdb.h; it's already in defs.h,
		and #$%&* ultrix doesn't protect it from multiple
		inclusions.

Sat Mar 23 01:33:09 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* sys_term.c: Remove utmpx stuff so libpty can do it.
	(start_login): Remove utmpx handling here as well.
	(rmut): expunged; libpty should deal.

	* configure.in : Do not use streamspty on SGIs; it really doesn't
 	work, even though all the interfaces are prsent.

	* telnetd.c: Move prototype for doit to be global instead of
        streams-specific.

	Tue Mar 19 18:43:46 1996  Ken Raeburn  <raeburn@cygnus.com>

        For environments not supporting common storage:
        * defs.h (P): Add definition here.
        (line, encrypt_output, decrypt_input): Declare here.
        * ext.h (line, encrypt_output, decrypt_input): Not here.
        (terminaltype): Declare explicitly "extern".
        * telnetd.c (auth_level, require_SecurID): Don't initialize here.

Mon Mar 18 20:29:05 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Added flags which turn on the encryption option.

	* telnetd.c (getterminaltype): If the authentication option which
		was negotiated requires that encryption be turned on, then
		enforce this here.

Sun Mar  3 14:43:04 1996  Mark W. Eichin  <eichin@cygnus.com>

	* configure.in: if we don't have termcap, check for curses lib.

Wed Feb 28 21:07:42 1996  Mark Eichin  <eichin@cygnus.com>

	* telnetd.c (telnet): rename HE to HEstr to avoid conflict with
	HP/UX 10.01 "Fields within IO_STATUS register" values in cpu.h.

Mon Feb 26 03:33:48 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: Call USE_ANAME

Sun Feb 25 20:26:00 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* telnetd.c: Use MAXDNAME not MAXHOSTNAMELEN; MAXHOSTNAMELEN is
        only for gethostname() and sethostname() and has nothing to do
        with domains.
